--- a/gym_exercises/src/App.css
+++ b/gym_exercises/src/App.css
@@ -41,6 +41,12 @@ body {
   .left-arrow:hover {
     transform: scale(1.3, 1.3);
   }
+  .scroll-bar-horizontal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
   
   .react-horizontal-scrolling-menu--wrapper {
     width: 100%;
